[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["kernelzeroday <a>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
zimscan = "^0.2.0"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
